test/fail/match_expr_incompatible_typ.cll
match:none (true) byvalue {
    0 { null; }
    default { null; }
};
0;
